--- a/barley.cabal
+++ b/barley.cabal
@@ -21,3 +21,7 @@ Executable barley
     snap-server,
     html < 1.1.2,
     transformers
+
+  ghc-options: -Wall
+  if impl(ghc >= 6.8)
+    ghc-options: -fwarn-tabs
