--- a/barley.cabal
+++ b/barley.cabal
@@ -7,7 +7,11 @@ Maintainer:          johan.tibell@gmail.com
 Category:            Web
 Build-type:          Simple
 Cabal-version:       >=1.2
-data-files: public/scaffold.hs index.hs
+
+data-files:
+  seed/Index.hs
+  seed/static/scaffold.css
+  seed/Template.hs
 
 Executable barley
   Main-is: barley.hs
