--- a/barley.cabal
+++ b/barley.cabal
@@ -27,7 +27,7 @@ Executable barley
     containers < 0.4,
     directory < 1.1,
     filepath < 1.2,
-    plugins,
+    plugins >= 1.5.1.4,
     snap-core == 0.2.*,
     snap-server == 0.2.*,
     html < 1.1.2,
