--- a/barley.cabal
+++ b/barley.cabal
@@ -58,6 +58,7 @@ Executable barley
     snap-server == 0.2.*,
     html < 1.1.2,
     text < 0.11,
+    unix,
     transformers
 
   ghc-options: -Wall
