--- a/barley.cabal
+++ b/barley.cabal
@@ -48,10 +48,10 @@ Executable barley
   Build-depends:
     base == 4.*,
     bytestring == 0.9.*,
-    containers == 0.3.*,
-    directory == 1.0.*,
-    filepath == 1.1.*,
-    ghc >= 6.10 && < 6.13,
+    containers >= 0.3 && < 0.5,
+    directory >= 1.0 && < 1.2,
+    filepath >= 1.1 && < 1.3,
+    ghc >= 6.10 && < 7.1,
     ghc-prim == 0.2.*,
     plugins >= 1.5.1.4 && < 1.6,
     snap-core == 0.4.*,
